HTML-ben inputok létrehozása

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <label for="kepurl">Kép url: </label>
+      <input type="url" name="kepurl" id="kepurl">
+      <label for="betumeret">Betűméret: </label>
+      <input type="number" name="betumeret" id="betumeret">
+      <label for="sorkozmeret">Sorköz mérete: </label>
+      <input type="number" name="sorkozmeret" id="sorkoz">
+      <label for="betuszin">Betűszín: </label>
+      <input type="color" name="betuszin" id="betuszin">
+      <input type="button" id="gomb">
+      <p>Lórum ipse mint hala és csörp, mint horiv kona nagyon padt. Eddig 35 vicika hajnoskodt erre a pólira és 224 könyörzsököt zakoltatott. Még két tatás volt hátra gránk szegéséig. Hízeskedt a szemétségben, hogy talán a lazasság bizlaton keledvesek miatt tagoszt valamit. Oly finoman, olyan érzékien fedte meg a magymát, osztózta szét a titást... És valami kegyes forgóg lejlődt a hihlegben, amikor a bizlat végén rozott... Egy bágyan izmus taletta, mellesleg sítármán is, érményességgel, plusz két láltsággal... A szedéssel szemben volt a puffos toza, balra a kavadások, jobbra pedig a mócsán.</p>
+      <img src="" class="kep" alt="">
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
